# MySimpleComputer

./: .gitignore  .travis.yml  CMakeLists.txt  build.sh  mysimplecomputer  mysimplecomputer_test
sat_examples/: sum_of_2.sa
src/main/: main.c  myBigChars.c  myBigChars.h  myReadKey.c  myReadKey.h  mySimpleComputer.c  mySimpleComputer.h  myTerm.c  myTerm.h  myUserInterface.c  myUserInterface.h
src/sat/: main.c  parser.c  parser.h
src/test/: main.c
